<resources>
    <string name="app_name">Nachos Business</string>
    <!--dashboard strings-->
    <string name="enable_notifs">Enable Organizer and Admin notification?</string>
    <string name="profile_hello">Hi, </string>
    <string name="profile_events_header">Events you\'re signed up for</string>
    <string name="profile_button">Profile</string>
    <string name="profile_event_updates">Event Updates</string>
    <string name="profile_join_events">Join Events</string>
    <string name="profile_organizer_events">Your Events</string>
    <string name="profile_admin_browse">Browse</string>
    <string name="profile_organizer_facility">Facility</string>
    <!--update profile strings-->
    <string name="update_profile">Update Profile</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_picture">Profile Picture</string>

    <!--facility strings-->
    <string name="facility_title">Add/Edit Your Facility</string>
    <string name="add_facility">Add a New Facility</string>
    <string name="edit_facility">Edit Your Facility</string>
    <string name="facility_name_hint">Enter Your Facility Name (Required)</string>
    <string name="facility_name">Facility Name</string>
    <string name="facility_location_hint">Enter Your Facility Location (Required)</string>
    <string name="facility_location">Location</string>
    <string name="facility_description_hint">Enter a Description (Required)</string>
    <string name="facility_description">Description</string>
    <string name="facility_button_save">Save Changes</string>
    <string name="facility_button_cancel">Cancel Changes</string>

    <!--org events strings-->
    <string name="org_event_title">Your Organized Events</string>

    <!--event waitlist strings-->
    <string name="waitlist_title">Waitlist</string>

    <!--event registration strings-->
    <string name="event_register_title">Register for an Event</string>
    <string name="event_reg_registration_opens">Registration Opens:</string>
    <string name="event_reg_to">to</string>
    <string name="event_reg_spots_remaining">spots remaining!</string>
    <string name="event_reg_sign_up">Sign-Up to Wait List!</string>

    <!--event registration strings-->
    <string name="event_leave_waitlist_title">Currently Registered on Waitlist</string>
    <string name="event_entrant_leave">Leave Waiting List</string>
    <string name="event_invite_list_title">You have been Invited!</string>
    <string name="event_accepted_list_title">You are Confirmed!!</string>

    <!--Crate event strings!-->
    <string name="event_button_save">Create Event</string>
    <string name="event_button_cancel">Cancel Event Creation</string>
    <string name="create_event">Create Event</string>
    <string name="event_description">Event Description:</string>
    <string name="geolocation_verification">Verify where users will join the waiting list from?</string>
    <string name="max_number_of_attendees_optional">Max number of attendees </string>
    <string name="event_date">Event Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="signup_deadline">Sign-up deadline</string>
    <string name="open_date">Open Date</string>
    <string name="close_date">Close Date</string>
    <string name="upload_a_poster_optional">Upload a poster (Optional)</string>
    <string name="event_name">Event Name</string>
    <string name="price_optional">Price (Optional)</string>
    <string name="start_time">Start Time</string>
    <string name="event_time">Event Time</string>
    <string name="end_time">End Time</string>
    <string name="event_frequency">Event Frequency</string>
    <string name="not_set">Not set</string>
    <string name="add_a_poster_for_this_event">Add a poster for this event</string>
    <string name="delete_button">Delete Event</string>
    <string name="edit_event_button_save">Edit Event</string>
    <string name="edit_event_button_cancel">Cancel Edit Event</string>

</resources>