<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/delete_event_button"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_button"
        app:backgroundTint="@color/redButton"
        app:layout_constraintBottom_toTopOf="@+id/editCloseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toEndOf="@+id/listview_dashboard_event_date"
        app:layout_constraintTop_toBottomOf="@+id/facility_header_const"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/editMaxWaitlist"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:text="Maximum attendees in waitlist (optional)"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editMaxWaitlist"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility_header_const"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createEventText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/create_event"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/editEventFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/event_frequencies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/event_description"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGeolocation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/geolocation_verification"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMaxAttendees" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/max_number_of_attendees_optional"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadPoster" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/event_date"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEventDescription" />

    <EditText
        android:id="@+id/editEventDescription"
        android:layout_width="394dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:maxLines="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="151dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_a_poster_optional"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <CheckBox
        android:id="@+id/editGeolocation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/listview_dashboard_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/event_name"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventText" />

    <TextView
        android:id="@+id/listview_dashboard_event_freq"
        android:layout_width="91dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_optional"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="91dp"
        android:layout_height="15dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_deadline"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/event_time"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editEventDescription" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_dashboard_event_freq" />

    <ImageButton
        android:id="@+id/btnUploadPoster"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/add_a_poster_for_this_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editMaxAttendees"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:inputType="number"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="17dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="10dp"
        android:text="@string/event_frequency"
        android:textColor="#98525252"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_dashboard_event_date" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datetimelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/event_button_const"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEventDescription"
        app:layout_constraintVertical_bias="0.19999999">

        <Button
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/editStartDate"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/editEndTime"
            app:layout_constraintHorizontal_bias="0.744"
            app:layout_constraintStart_toEndOf="@+id/editEndDate"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSelectedStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStartDate"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <TextView
            android:id="@+id/textViewSelectedEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEndDate"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <TextView
            android:id="@+id/textViewSelectedStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStartTime"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <TextView
            android:id="@+id/textViewSelectedEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEndTime"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="103dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_button_const"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetimelayout">

        <Button
            android:id="@+id/event_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/event_button_save"
            app:backgroundTint="@color/greenButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/event_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/event_button_cancel"
            app:backgroundTint="@color/redButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_button_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/editOpenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/open_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/editCloseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/close_date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textViewSelectedOpenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:text="@string/not_set"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOpenDate"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="103dp" />

    <TextView
        android:id="@+id/textViewSelectedCloseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:text="@string/not_set"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCloseDate"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="103dp" />

</androidx.constraintlayout.widget.ConstraintLayout>